--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Title page</h1>
+    <div class="product">
+        <p class="productName">Lorem ipsum dolor sit.</p>
+    </div>
 </body>
 </html>
